Add average years experience method and to view

--- a/app/views/mechanics/index.html.erb
+++ b/app/views/mechanics/index.html.erb
@@ -3,3 +3,5 @@ All Mechanics
 Name: <%= mechanic.name %><br>
 Years Experience: <%= mechanic.years_experience %>
 <% end %>
+
+Average years of experience: <%= @mechanics.find_average_years_experience %>
