--- a/app/views/mechanics/show.html.erb
+++ b/app/views/mechanics/show.html.erb
@@ -3,3 +3,9 @@ Years of Experience: <%= @mechanic.years_experience %><br>
 Rides: <% @mechanic.rides.find_open_rides.list_by_thrills.each do |ride| %>
 <%= ride.name %>
 <% end %>
+
+<%= form_with url: "/mechanics/#{@mechanic.id}", method: :get, local: :true do |f|%>
+  <%= f.label :query, "Add New Ride:" %>
+  <%= f.text_field :query %>
+  <%= f.submit "Submit" %>
+<% end %>
