--- a/app/views/mechanics/show.html.erb
+++ b/app/views/mechanics/show.html.erb
@@ -1,11 +1,11 @@
 Mechanic's Name: <%= @mechanic.name %><br>
 Years of Experience: <%= @mechanic.years_experience %><br>
-Rides: <% @mechanic.rides.find_open_rides.list_by_thrills.each do |ride| %>
+Current rides they're working on: <% @mechanic.rides.find_open_rides.list_by_thrills.each do |ride| %>
 <%= ride.name %>
 <% end %>
 
 <%= form_with url: "/mechanics/#{@mechanic.id}", method: :get, local: :true do |f|%>
-  <%= f.label :query, "Add New Ride:" %>
+  <%= f.label :query, "Add New Ride to workload:" %>
   <%= f.text_field :query %>
   <%= f.submit "Submit" %>
 <% end %>
